product_docs/docs/edb-postgres-ai/1.2/ai-factory/index.mdx
---
title: AI Factory
navTitle: AI Factory
description: Build AI-powered solutions with EDB Postgres® AI, including Gen AI, vector search, model serving, pipelines, and Postgres integration. Start here to explore concepts, learning paths, use cases, and tutorials.
navRootedTo: /edb-postgres-ai
---

**EDB Postgres® AI** provides a scalable, modular platform to build and operationalize AI-powered applications and intelligent data products — starting from **your data**, in **your databases**, running in **your data center or cloud environments**.

At its core, EDB Postgres® AI (EDB PG AI) is designed to enable **Sovereign AI**: allowing you to build intelligence on top of your trusted Postgres data, governed within your enterprise boundaries. Your models, your pipelines, your vector indexes — all managed and controlled by you.

With EDB PG AI, you can:

-   Build and run [**Gen AI agents**](./gen-ai/agent-studio) and conversational experiences powered by your enterprise knowledge and sovereign Postgres data in [**Hybrid Manager**](/edb-postgres-ai/1.2/hybrid-manager/ai-factory/)
-   Perform [**vector search**](./vector-engine) and **retrieval-augmented generation (RAG)** over structured and unstructured sources
-   Create [**document intelligence pipelines**](./pipeline) that ingest, process, and classify data from diverse sources
-   Deploy scalable [**model serving**](model/serving/), using GPU acceleration and enterprise observability
-   Extend Postgres with AI-driven query patterns and [**vector-native capabilities**](./vector-engine)
-   Seamlessly combine AI and analytics across Postgres, EDB Lakehouse, and other EDB-integrated platforms

**EDB PG AI is optimized for Hybrid Manager™**, with deep platform integration, governance, and observability — while many components can also run in other EDB Postgres environments (on-prem or cloud) with the right licensing and architecture.

* * *

## Why Sovereign AI?

EDB PG AI enables you to create **Sovereign AI solutions** that respect your data ownership, security, and governance requirements:

-   Operate on **your data** — in your Postgres databases and EDB analytics lakes
-   Train and serve **your models**, under your control — no opaque third-party APIs required
-   Deploy **where you need** — in Hybrid Manager, on-prem data centers, or in your cloud tenancy
-   Integrate AI, analytics, and operational data into unified, governed architectures
-   Audit, monitor, and control the full lifecycle of AI workloads — from ingestion to inference

By combining Postgres, modern AI pipelines, and scalable model serving in a fully governed architecture, EDB PG AI helps you unlock AI innovation **without compromising trust or compliance**.

* * *

## What You Can Build

EDB PG AI is designed to help you create intelligent applications and systems **on top of your trusted data** — with Postgres at the center.

You can build:

-   **Enterprise knowledge assistants** powered by Gen AI and Postgres-native [**vector search**](./vector-engine)
-   **AI-powered search portals** that integrate structured, semi-structured, and unstructured data
-   **Document processing pipelines** with [**Pipelines**](./pipeline), OCR, summarization, classification, and extraction
-   **Conversational applications** for both internal users and external customers, built with [**Gen AI Builder**](./gen-ai/builder)
-   **ML/AI-powered data apps** exposing [**model-serving APIs**](model/serving/) for search, recommendations, NLP, and vision
-   **Intelligent automation** embedded in business systems and workflows — driven by your data
-   **RAG architectures** combining Postgres, Lakehouse, and Gen AI to deliver trusted answers

See our [Use Cases](./learn/use-cases.mdx) and [Industry Solutions](./learn/solutions.mdx) for detailed examples and solution patterns.

* * *

## Who Is It For, and How to Get Started?

EDB PG AI serves **data-driven organizations** that want to build AI applications and systems **on top of their core Postgres and analytics estate**:

-   **Developers** building Gen AI apps and intelligent data experiences
-   **Data engineers** managing [**Pipelines**](./pipeline), [**vector search**](./vector-engine), and hybrid data preparation
-   **AI/ML engineers** operationalizing models with [**Model Serving**](model/serving/) within governed Postgres-integrated environments
-   **Data architects** designing AI + analytics solutions at scale
-   **IT leaders and security teams** seeking enterprise-grade control and auditability

Getting started is easy:

-   Explore our [Learning Paths](./learn/paths) to build foundational skills
-   Start building **knowledge bases** and **assistants** with [**Gen AI Builder**](./gen-ai/builder) and [**Agent Studio**](./gen-ai/agent-studio)
-   Deploy your first [**model serving workload**](model/serving/) and integrate with Postgres queries
-   Build [**pipelines**](./pipeline) and [**vector search**](./vector-engine) to power intelligent applications on trusted data

* * *

## Core Capabilities

Explore each capability area of EDB PG AI:

### Gen AI Workloads

-   [Gen AI Workloads](./gen-ai) — Overview of capabilities
-   [Agent Studio](./gen-ai/agent-studio) — Build assistants, tools, structures, and rulesets
-   [Gen AI Builder](./gen-ai/builder) — Manage knowledge bases and data lakes

### Asset Library and Model Serving

-   [Asset Library](model/library/) — Manage and govern models and AI assets
-   [Model Serving](model/serving/) — Deploy and scale model inference services

### Pipelines and Vector Engine

-   [Pipeline Capabilities](./pipeline) — Build pipelines for document intelligence and vectorization
-   [Vector Engine](./vector-engine) — Integrate vector search and AI-driven query patterns into Postgres

* * *

## EDB PG AI and Analytics

EDB PG AI is deeply integrated with the [**EDB Analytics ecosystem**](/edb-postgres-ai/1.2/analytics/):

-   Combine structured + unstructured data for AI-powered search and insights
-   Build Lakehouse-backed RAG pipelines that feed Gen AI agents
-   Store and query vector embeddings natively alongside Postgres and Lakehouse data
-   Create hybrid AI + analytics solutions that leverage Postgres extensions, analytics engines, and AI serving — all governed within EDB PG AI

This enables truly **data-driven AI** — where the best of your operational, transactional, and analytical data powers your AI systems.

* * *

## Learn and Build

Go deeper with the following resources:

-   [Explained Concepts](./learn/explained) — Understand the architecture and components of EDB PG AI
-   [How-to Guides](./learn/how-to/gen-ai) — Practical guides for building EDB PG AI solutions

* * *

## Build Your EDB PG AI Solution

Start today with one or more of these steps:

-   Build your first [**Gen AI Assistant**](./gen-ai/agent-studio) using Agent Studio
-   Deploy a [**Knowledge Base**](./gen-ai/builder) with Gen AI Builder and integrate with RAG
-   Launch your first [**Model Serving InferenceService**](model/serving/)
-   Create [**Data Pipelines**](./pipeline) for document intelligence
-   Add [**Vector Search**](./vector-engine) to Postgres

Explore [Use Cases](./learn/use-cases.mdx) and [Industry Solutions](./learn/solutions.mdx) for end-to-end patterns and architecture guidance.

* * *

**EDB PG AI** gives you a powerful, modular foundation to build AI-powered solutions **on your data, in your datacenter or cloud, governed by you**.

**Start building today.**
