product_docs/docs/edb-postgres-ai/1.3/ai-factory/index.mdx
---
title: AI Factory
navTitle: AI Factory
description: Build AI-powered solutions with EDB Postgres® AI, including Gen AI, vector search, model serving, pipelines, and Postgres integration. Start here to explore concepts, learning paths, use cases, and tutorials.
redirects:
- /purl/ai-factory
- /edb-postgres-ai/ai-factory/:splat
navRootedTo: /edb-postgres-ai
navigation:
  - "#Start"
  - hub-map
  - learn
  - concepts
  - "#Quickstarts"
  - learn/quickstarts
  - "#Use Cases"
  - learn/use-cases
  - "#Use Anywhere"
  - pipeline
  - vector-engine
  - "#Use In Hybrid Manager"
  - model
  - gen-ai

---

**EDB Postgres® AI** provides a scalable, modular platform to build and operationalize AI-powered applications and intelligent data products — starting from **your data**, in **your databases**, running in **your data center or cloud environments**.

At its core, EDB Postgres® AI (EDB PG AI) is designed to enable **Sovereign AI**: allowing you to build intelligence on top of your trusted Postgres data, governed within your enterprise boundaries. Your models, your pipelines, your vector indexes — all managed and controlled by you.

With EDB PG AI, you can:

-   Build and run [**Gen AI agents**](/edb-postgres-ai/1.3/ai-factory/gen-ai/agent-studio) and conversational experiences powered by your enterprise knowledge and sovereign Postgres data in [**Hybrid Manager**](/edb-postgres-ai/latest/hybrid-manager/ai-factory/)
-   Perform [**vector search**](/edb-postgres-ai/1.3/ai-factory/vector-engine) and **retrieval-augmented generation (RAG)** over structured and unstructured sources
-   Create [**document intelligence pipelines**](/edb-postgres-ai/1.3/ai-factory/pipeline) that ingest, process, and classify data from diverse sources
-   Deploy scalable [**model serving**](/edb-postgres-ai/1.3/ai-factory/model/serving/), using GPU acceleration and enterprise observability
-   Extend Postgres with AI-driven query patterns and [**vector-native capabilities**](/edb-postgres-ai/1.3/ai-factory/vector-engine)
-   Seamlessly combine AI and analytics across Postgres, EDB Lakehouse, and other EDB-integrated platforms

**EDB PG AI is designed for Hybrid Manager™ first.** Most capabilities are delivered and managed inside [Hybrid Manager’s AI Factory](/edb-postgres-ai/latest/hybrid-manager/ai-factory/), where you get a unified control plane, governance, and observability. You can also run selected components outside Hybrid Manager — notably Postgres extensions and AI DB (AIDB) — when supported by your environment and licensing.

---

## Where AI Factory runs

Choose the right operating model for your teams and environments:

- Hybrid Manager (recommended hub): Use [AI Factory in Hybrid Manager](/edb-postgres-ai/latest/hybrid-manager/ai-factory/) to provision, govern, and observe AI workloads across Postgres, pipelines, vector search, model serving, and Gen AI.
- Outside Hybrid Manager (selected components): Run Postgres-focused capabilities on compatible platforms, such as the [Vector Engine](/edb-postgres-ai/1.3/ai-factory/vector-engine), [Pipelines](/edb-postgres-ai/1.3/ai-factory/pipeline), or the AI DB (AIDB) feature set where available.

When you operate outside Hybrid Manager, you own cluster lifecycle, security, and observability. Validate compatibility, performance, and licensing for your target platform before deployment.

---

## Prerequisites

What you need depends on where you run:

- Using Hybrid Manager: Access to a Hybrid Manager instance with AI Factory enabled and the entitlements required for Gen AI, model serving, and vector search. See [AI Factory in Hybrid Manager](/edb-postgres-ai/latest/hybrid-manager/ai-factory/).
- Running components outside Hybrid Manager: A supported Postgres environment for extensions and AIDB, and the necessary infrastructure for pipelines and model serving as applicable.

For precise component support (outside Hybrid Manager), minimum versions, and licensing boundaries, coordinate with your EDB representative and your platform owner.

* * *

## Why Sovereign AI?

EDB PG AI enables you to create **Sovereign AI solutions** that respect your data ownership, security, and governance requirements:

-   Operate on **your data** — in your Postgres databases and EDB analytics lakes
-   Train and serve **your models**, under your control — no opaque third-party APIs required
-   Deploy **where you need** — in Hybrid Manager, on-prem data centers, or in your cloud tenancy
-   Integrate AI, analytics, and operational data into unified, governed architectures
-   Audit, monitor, and control the full lifecycle of AI workloads — from ingestion to inference

By combining Postgres, modern AI pipelines, and scalable model serving in a fully governed architecture, EDB PG AI helps you unlock AI innovation **without compromising trust or compliance**.

* * *

## What You Can Build

EDB PG AI is designed to help you create intelligent applications and systems **on top of your trusted data** — with Postgres at the center.

You can build:

-   **Enterprise knowledge assistants** powered by Gen AI and Postgres-native [**vector search**](/edb-postgres-ai/1.3/ai-factory/vector-engine)
-   **AI-powered search portals** that integrate structured, semi-structured, and unstructured data
-   **Document processing pipelines** with [**Pipelines**](/edb-postgres-ai/1.3/ai-factory/pipeline), OCR, summarization, classification, and extraction
-   **Conversational applications** for both internal users and external customers, built with [**Gen AI Builder**](/edb-postgres-ai/1.3/ai-factory/gen-ai/builder)
-   **AI-powered data apps** exposing [**model-serving APIs**](/edb-postgres-ai/1.3/ai-factory/model/serving/) for search, recommendations, NLP, and vision
-   **Intelligent automation** embedded in business systems and workflows — driven by your data
-   **RAG architectures** combining Postgres, Lakehouse, and Gen AI to deliver trusted answers

See our [Use Cases](/edb-postgres-ai/1.3/ai-factory/use-cases) and [Industry Solutions](/edb-postgres-ai/1.3/ai-factory/solutions) for detailed examples and solution patterns.

* * *

## Choose your path

Use these entry points based on your goal (Diataxis):

- Concepts and architecture: [AI Factory Concepts](/edb-postgres-ai/1.3/ai-factory/concepts)
- How-to guides: [Gen AI how-to](/edb-postgres-ai/1.3/ai-factory/gen-ai/how-to/) and [Model serving how-to](/edb-postgres-ai/1.3/ai-factory/model/how-to-model-serving)
- Tutorials and learning: [Learning Paths](/edb-postgres-ai/1.3/ai-factory/learning-paths) — 101, 201, and 301
- Reference: [Gen AI reference](/edb-postgres-ai/1.3/ai-factory/gen-ai/reference/), [Model Serving](/edb-postgres-ai/1.3/ai-factory/model/serving/), [Vector Engine](/edb-postgres-ai/1.3/ai-factory/vector-engine), and [Pipelines](/edb-postgres-ai/1.3/ai-factory/pipeline)

* * *

## Who Is It For, and How to Get Started?

EDB PG AI serves **data-driven organizations** that want to build AI applications and systems **on top of their core Postgres and analytics estate**:

-   **Developers** building Gen AI apps and intelligent data experiences
-   **Data engineers** managing [**Pipelines**](/edb-postgres-ai/1.3/ai-factory/pipeline), [**vector search**](/edb-postgres-ai/1.3/ai-factory/vector-engine), and hybrid data preparation
-   **AI engineers** operationalizing models with [**Model Serving**](/edb-postgres-ai/1.3/ai-factory/model/serving/) within governed Postgres-integrated environments
-   **Data architects** designing AI + analytics solutions at scale
-   **IT leaders and security teams** seeking enterprise-grade control and auditability

Getting started is easy:

-   Explore our [Learning Paths](/edb-postgres-ai/1.3/ai-factory/learning-paths) to build foundational skills
-   Start building **knowledge bases** and **assistants** with [**Gen AI Builder**](/edb-postgres-ai/1.3/ai-factory/gen-ai/builder) and [**Agent Studio**](/edb-postgres-ai/1.3/ai-factory/gen-ai/agent-studio)
-   Deploy your first [**model serving workload**](/edb-postgres-ai/1.3/ai-factory/model/serving/) and integrate with Postgres queries
-   Build [**pipelines**](/edb-postgres-ai/1.3/ai-factory/pipeline) and [**vector search**](/edb-postgres-ai/1.3/ai-factory/vector-engine) to power intelligent applications on trusted data

* * *

## Core Capabilities

Explore each capability area of EDB PG AI:

### Gen AI Workloads

-   [Gen AI Workloads](/edb-postgres-ai/1.3/ai-factory/gen-ai) — Overview of capabilities
-   [Agent Studio](/edb-postgres-ai/1.3/ai-factory/gen-ai/agent-studio) — Build assistants, tools, structures, and rulesets
-   [Gen AI Builder](/edb-postgres-ai/1.3/ai-factory/gen-ai/builder) — Manage knowledge bases and data lakes

### Asset Library and Model Serving

-   [Asset Library](/edb-postgres-ai/1.3/ai-factory/model/library/) — Manage and govern models and AI assets
-   [Model Serving](/edb-postgres-ai/1.3/ai-factory/model/serving/) — Deploy and scale model inference services

### Pipelines and Vector Engine

-   [Pipeline Capabilities](/edb-postgres-ai/1.3/ai-factory/pipeline) — Build pipelines for document intelligence and vectorization
-   [Vector Engine](/edb-postgres-ai/1.3/ai-factory/vector-engine) — Integrate vector search and AI-driven query patterns into Postgres

* * *

## EDB PG AI and Analytics

EDB PG AI is deeply integrated with the [**EDB Analytics ecosystem**](/edb-postgres-ai/latest/analytics/):

-   Combine structured + unstructured data for AI-powered search and insights
-   Build Lakehouse-backed RAG pipelines that feed Gen AI agents
-   Store and query vector embeddings natively alongside Postgres and Lakehouse data
-   Create hybrid AI + analytics solutions that leverage Postgres extensions, analytics engines, and AI serving — all governed within EDB PG AI

This enables truly **data-driven AI** — where the best of your operational, transactional, and analytical data powers your AI systems.

* * *

## Learn and Build

Go deeper with the following resources:

-   [Explained Concepts](/edb-postgres-ai/1.3/ai-factory/explained) — Understand the architecture and components of EDB PG AI
-   [How-to Guides](/edb-postgres-ai/1.3/ai-factory/gen-ai/how-to) — Practical guides for building EDB PG AI solutions

* * *

## Build Your EDB PG AI Solution

Start today with one or more of these steps:

-   Build your first [**Gen AI Assistant**](/edb-postgres-ai/1.3/ai-factory/gen-ai/agent-studio) using Agent Studio
-   Deploy a [**Knowledge Base**](/edb-postgres-ai/1.3/ai-factory/gen-ai/builder) with Gen AI Builder and integrate with RAG
-   Launch your first [**Model Serving InferenceService**](/edb-postgres-ai/1.3/ai-factory/model/serving/)
-   Create [**Data Pipelines**](/edb-postgres-ai/1.3/ai-factory/pipeline) for document intelligence
-   Add [**Vector Search**](/edb-postgres-ai/1.3/ai-factory/vector-engine) to Postgres

Explore [Use Cases](/edb-postgres-ai/1.3/ai-factory/use-cases) and [Industry Solutions](/edb-postgres-ai/1.3/ai-factory/solutions) for end-to-end patterns and architecture guidance.

* * *

**EDB PG AI** gives you a powerful, modular foundation to build AI-powered solutions **on your data, in your datacenter or cloud, governed by you**.

**Start building today.**
